assets/css/style.css
/* ... */
.image-gallery li {
    flex: 1 1 auto;
    /* or flex: auto; */
    height: 400px;
    cursor: pointer;
    position: relative;
}

.image-gallery::after {
    content: "";
    flex-grow: 999;
}

.image-gallery li img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    vertical-align: middle;
    border-radius: 10px;
    border: 1px solid #151C32;
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(57, 57, 57, 0.502);
    top: 0;
    left: 0;
    transform: scale(0);
    transition: all 0.2s 0.1s ease-in-out;
    font-family: "Cabin Condensed", sans-serif;
    color: #ececef;
    border-radius: 10px;
    /* center overlay content */
    display: flex;
    align-items: center;
    justify-content: center;
}

/* hover */
.image-gallery li:hover .overlay {
    transform: scale(1);
}


/*-------------------Live */

.timeline-area {
    border-left: 4px solid #49274A;
    left: -30px;
}

.tl-item {
    color: #49274A;
    padding: 10px 10px;
    font-size: 20px;
    border: 3px solid #49274A;
    border-radius: 10px;
    width: 60%;
    position: relative;
    text-align: center;
    margin-bottom: 20px;
}

.tl-item::before {
    content: '';
    display: block;
    width: 15px;
    height: 15px;
    border-radius: 50%;
    background-color: rgba(148, 97, 142, 1);
    border: 2px solid #49274A;
    position: absolute;
    top: 8px;
    left: -28px;
}

.tl-item::after {
    content: '';
    width: 0;
    height: 0;
    border-style: solid;
    border-color: transparent #49274A transparent transparent;
    border-width: 12px;
    position: absolute;
    left: -26px;
    top: 5px;
}

.tl-item h4 {
    font-size: 20px;
    padding-top: 10px;
    padding-bottom: 30px;
    text-align: center;
}

.tl-item h5 {
    font-size: 18px;
    padding: 5px;
    text-align: center;
}

.btn-link {
    text-decoration: none;
    text-align: right;
    font-size: 22px;
    color: #49274A;
    font-family: "Cabin Condensed", sans-serif;
    font-weight: 600;
}

.live-video {
    height: fit-content;
    width: 300px;
    border-radius: 10px;
    box-sizing: border-box;
    border: 1px solid #151C32;
    background-color: black;
}

/*-------------------Footer */

.social-links li a i {
    bottom: 2vh;
    width: 45px;
    height: 45px;
    border-radius: 50%;
    line-height: 7px;
    font-size: 26px;
    color: #ececef;
    background-color: #49274A;
    padding: 0;
    /*flex added to links themselves, from tutor support*/
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-container {
    padding: 0;
    display: flex;
}

.social-links {
    padding: 0;
    margin: 10px 0;
    list-style-type: none;
}

.social-links li a i:hover {
    color: #49274A;
    background-color: #ececef;
}

/* snippet below from: https://www.w3schools.com/css/css_align.asp */
.contact-container,
.watch-link-container {
    display: flex;
    justify-content: center;
    align-items: center;
    display: flex;
    justify-content: center;
    align-items: baseline;
    padding: 10px 15px;
    font-size: 12px;
    text-decoration: none;
    text-align: center;
}

#watch-link a:hover {
    color: #ececef;
}

#contact-button {
    background-color: #49274A;
    color: #ececef;
    text-decoration: none;
    font-family: "Ubuntu", sans-serif;
    text-align: center;
    display: flex;
    font-weight: 700;
    font-size: 16px;
    letter-spacing: 1px;
    margin: 0;
    padding: 5px;
}

.footer-container {
    margin: 0;

}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
}

/*-------------------Modal */

.modal {
    display: none;
    margin: auto 0;
    position: fixed;
    z-index: 1040;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    border-radius: 0;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

.modal-dialog {
    max-height: 90%;
    top: 5vh;
    background-color: #AEABBA;
    z-index: 1060;
    margin: 0 auto;
    position: relative;
    padding: 3px;
    max-width: 80%;
    border: 1px solid #151C32;
    border-radius: 25px 25px 25px 25px;
}

.modal-content {
    width: 100%;
    background-color: #ececef;
    border: 1px solid #151C32;
    border-radius: 25px 25px 25px 25px;
}

.modal-header {
    padding: 2px 16px;
}

.form-group {
    font-family: "Cabin Condensed", sans-serif;
    color: #151C32;
}

.modal-body {
    padding: 2px 16px;
}

#feedback {
    width: 100%;
}

.modal-footer {
    padding: 2px 16px;
}

#form-header,
#name-label,
#email-label,
#cancel,
#send {
    font-family: Ubuntu, sans-serif;
}

/*-------------------Contact Form */

.form-control {
    padding: 5px;
    font-family: "Cabin Condensed", sans-serif;
    font-weight: 400;
    font-size: 16px;
    margin: 5px;
    max-width: 85%;
}


/*-------------------Media Queries */


@media screen and (max-width:576px) {

    /*--- Header*/
    #nav-container {
        border-radius: 25px 25px 25px 25px;
    }

    #ticket-alert {
        display: none;
    }

    .nav-item a {
        overflow: hidden;
        Margin-top: 2px;
        text-decoration: none;
        font-size: 12px;
        padding: 3px 3px 5px 3px;
    }

    /*--- History*/
    .history-content {
        margin: 5px;
    }

    /*--- Live*/
    .timeline-area {
        margin-top: 20px;
    }

    .tl-item::before {
        left: -28px;
    }

    .tl-item::after {
        left: -26px;

    }
}
/* ... */

